--- a/25_11_03-HackerRank_6/index.html
+++ b/25_11_03-HackerRank_6/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Staircase - HackerRank</title>
+  <style>
+    body {
+      font-family: monospace;
+      background: #0e1111;
+      color: #00ff95;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      gap: 20px;
+    }
+    input {
+      padding: 8px;
+      font-size: 16px;
+      width: 100px;
+      text-align: center;
+      border-radius: 8px;
+      border: 1px solid #00ff95;
+      background: transparent;
+      color: #00ff95;
+    }
+    pre {
+      font-size: 18px;
+      line-height: 1.2em;
+      white-space: pre;
+    }
+    button {
+      background: #00ff95;
+      color: #000;
+      border: none;
+      padding: 8px 16px;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #00cc77;
+    }
+  </style>
 </head>
 <body>
-    
+  <h2>🧱 Staircase Generator</h2>
+  <div>
+    <label for="size">Tamaño n: </label>
+    <input type="number" id="size" min="1" max="100" value="6" />
+    <button onclick="drawStaircase()">Generar</button>
+  </div>
+  <pre id="output"></pre>
+
+  <script src="script.js"></script>
 </body>
-<script src="./script.js"></script>
 </html>
