--- a/25_11_03-HackerRank_6/index.html
+++ b/25_11_03-HackerRank_6/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Staircase - HackerRank</title>
+  <title>Staircase - HackerRank</title> <!-- Titulo Pestaña -->
+  <!-- Estilos del DOM -->
   <style>
-    body {
+    body { 
       font-family: monospace;
       background: #0e1111;
       color: #00ff95;
@@ -46,14 +47,14 @@
   </style>
 </head>
 <body>
-  <h2>🧱 Staircase Generator</h2>
+  <h2>🧱 Staircase Generator</h2> <!-- Titulo -->
   <div>
-    <label for="size">Tamaño n: </label>
-    <input type="number" id="size" min="1" max="100" value="6" />
-    <button onclick="drawStaircase()">Generar</button>
+    <label for="size">Tamaño n: </label> <!-- Etiqueta -->
+    <input type="number" id="size" min="1" max="100" value="6" /> <!-- Input, campo de texto -->
+    <button onclick="drawStaircase()">Generar</button> <!-- Boton que ejecuta una funcion -->
   </div>
-  <pre id="output"></pre>
+  <pre id="output"></pre> <!-- Una etiqueta con un ID -->
 
-  <script src="script.js"></script>
+  <script src="script.js"></script> <!-- Script a Ejecutar -->
 </body>
 </html>
