--- a/25_11_03-HackerRank_6/index.html
+++ b/25_11_03-HackerRank_6/index.html
@@ -6,6 +6,7 @@
   <title>Staircase - HackerRank</title> <!-- Titulo Pestaña -->
   <!-- Estilos del DOM -->
   <style>
+    /* CSS */
     body { 
       font-family: monospace;
       background: #0e1111;
