Test Work on Local

--- a/25_11_14-HackerRank_7/index.html
+++ b/25_11_14-HackerRank_7/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <title>miniMaxSum – Práctica</title>
 </head>
 <body>
-    
+  <h1>Ejercicio miniMaxSum</h1>
+
+  <p>Escribe 5 números separados por espacio:</p>
+
+  <input
+    type="text"
+    id="numbersInput"
+    placeholder="Ejemplo: 1 2 3 4 5"
+    size="40"
+  />
+
+  <button id="calcBtn">Calcular</button>
+
+  <h2>Resultado:</h2>
+  <pre id="result"></pre>
+
+  <!-- Cargamos la lógica desde script.js -->
+  <script src="script.js"></script>
 </body>
-<script src="./script.js"></script>
 </html>
