HackerRank Solved VelitasCumpleañosAltas

--- a/25_11_29-HackerRank_8/index.html
+++ b/25_11_29-HackerRank_8/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>birthdayCakeCandles Test</title>
 </head>
 <body>
-    
+  <h1>Prueba birthdayCakeCandles</h1>
+
+  <p>Ingresa las alturas de las velas separadas por espacios:</p>
+
+  <input id="inputCandles" type="text" placeholder="Ejemplo: 3 2 1 3" style="width:300px;">
+  <button onclick="runTest()">Calcular</button>
+
+  <h2>Resultado:</h2>
+  <pre id="output"></pre>
+
+  <script src="script.js"></script>
 </body>
-<script src="./script.js"></script>
 </html>
