--- a/25_11_29-HackerRank_8/index.html
+++ b/25_11_29-HackerRank_8/index.html
@@ -2,19 +2,20 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>birthdayCakeCandles Test</title>
+  <title>Altura Velas de Cumpleaños</title> <!-- Nombre Pestaña -->
 </head>
 <body>
-  <h1>Prueba birthdayCakeCandles</h1>
+  <h1>Prueba de Altura de Velas de Cumpleaños</h1> <!-- Titulo en el DOM -->
 
-  <p>Ingresa las alturas de las velas separadas por espacios:</p>
+  <p>Ingresa las alturas de las velas separadas por espacios:</p> <!-- Parrafo en el DOM -->
 
-  <input id="inputCandles" type="text" placeholder="Ejemplo: 3 2 1 3" style="width:300px;">
-  <button onclick="runTest()">Calcular</button>
+  <input id="inputCandles" type="text" placeholder="Ejemplo: 3 2 1 3" style="width:300px;"> 
+  <!-- Campo de texto, con un id, se ingresa texto, se pone un mensaje y se le asigna un espacio -->
+  <button onclick="runTest()">Calcular</button> <!-- Se inicializa un boton, que invoca una funcion al darle click -->
 
-  <h2>Resultado:</h2>
-  <pre id="output"></pre>
+  <h2>Resultado:</h2> <!-- Titulo en el DOM en la parte inferior -->
+  <pre id="output"></pre> <!-- Etiqueta que muestra formato como fue escrito y tiene un id -->
 
-  <script src="script.js"></script>
+  <script src="script.js"></script> <!-- Invocamos el Script de JS -->
 </body>
 </html>
